src/app/ubs/ubs-admin/components/ubs-admin-table/ubs-admin-table.component.scss
@import '../../../../../typography/colorsUbs';
@import '../../../../../typography/fonts';

.cdk-drag-preview {
  box-sizing: border-box;
  padding: 0 15px;
  position: relative;
}

.cdk-drag-placeholder {
  color: transparent;
  position: relative;
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.cdk-drag-animating {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.example-box:last-child {
  border: none;
}

.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.search-term-input {
  width: 100%;
  margin: 10px 0;
}

mat-header-row {
  background-color: var(--ubs-primary-grey);
  min-height: 39px !important;
  overflow-wrap: break-word !important;
  word-wrap: break-word !important;
  white-space: nowrap !important;
  align-items: unset !important;
  cursor:
    url('../../../../../assets/img/ubs-admin-orders/Move-White.svg') 4 4,
    auto;
}

mat-header-cell {
  color: var(--ubs-primary-white);
  font-family: var(--primary-font);
  border: 1px solid var(--ubs-primary-light-grey);
  text-align: center;
  font-size: 14px;
  min-height: 39px;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  overflow-wrap: break-word;
  flex: none;
  display: block;
  line-height: 2.8;
  padding: 0;
  width: auto;

  .column-title {
    display: block;
    word-break: normal;
    overflow-wrap: break-word;
    line-height: 25px;
    width: 100%;
    padding: 5px 0 3px;
  }
}

.cdk-column-select {
  width: 100px !important;
}

input {
  display: inline-block;
  padding: 8px;
  margin: 20px;
  width: 128px;
  height: 36px;
}

.table {
  border-collapse: collapse;
}

.dropdown-menu,
.dropdown-menu-container {
  position: absolute;
  max-height: 500px;
  width: 356px;
  overflow: scroll;
  padding: 0;
  color: var(--ubs-primary-grey);
  font-family: var(--primary-font);
  background-color: var(--ubs-secondary-white);
}

.dropdown-menu {
  right: 0;
  margin-top: 16px;
}

.dropdown-menu-container {
  margin-right: 18px;
  margin-top: -7px;
  left: auto;
  z-index: 1000;
  float: left;
  min-width: 10rem;
  font-size: 1rem;
  text-align: left;
  list-style: none;
  border: 1px solid rgb(0 0 0 / 15%);
  border-radius: 0.25rem;
}

.date-range-box {
  display: flex;
  flex-direction: row;
  gap: 16px;
}

.data-field {
  display: flex;
  height: 36px;
  width: 138px;
  padding: 8px;
  border: 1px solid var(--ubs-quintynary-light-grey);
  border-radius: 4px;
  background-color: var(--ubs-primary-white);

  .date-input {
    font-size: 14px;
    height: 18px;
    width: 100%;
    background-color: transparent;
    margin: 0;
    padding: 0;
    border: 0;

    &:focus {
      outline: none;
    }
  }

  .calendar-btn {
    display: flex;
    align-items: center;
    background-color: transparent;
    border: 0;
  }
}

mat-row {
  min-height: 39px !important;
  max-height: 39px !important;
  align-items: unset;
  cursor: col-resize;
}

mat-cell {
  border: thin solid var(--ubs-primary-light-grey);
  border-top: none;
  color: var(--ubs-primary-grey);
  font-size: 12px;
  font-family: var(--primary-font);
  width: 200px;
  min-width: 48px;
  min-height: 39px !important;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  overflow-wrap: break-word;
  flex: none;
  display: inline;
  line-height: 2.9;
  padding: 0;
}

.mat-cell:first-child {
  min-width: auto;
}

.primary-color {
  color: var(--primary-green);
}

.mat-column-select {
  display: flex;
  justify-content: center;
  width: 50px !important;
  line-height: 1;
}

mat-header-cell:first-of-type,
mat-cell:first-of-type {
  padding-left: 0;
}

.mat-header-cell:first-child {
  min-width: auto;
}

.icon-row {
  display: flex;
  justify-content: center;
  margin-top: 5px;
  white-space: nowrap;
  padding-top: 5px;
  gap: 5px;
}

.amount-items {
  width: 100px;
  height: 36px;
  margin-right: 39px;
  border: 1px solid var(--ubs-primary-light-grey);
  background-color: var(--primary-white) !important;
  border-radius: 4px;
  font-size: 14px;
  color: var(--ubs-secondary-grey);
}

.accordion-list {
  list-style: none;
  padding: 0;
}

.export-excel-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 190px;
  height: 36px;
  background-color: var(--primary-white) !important;
  border: 1px solid var(--ubs-quaternary-dark-grey) !important;
  color: var(--ubs-quaternary-dark-grey);
  border-radius: 4px;
  font-weight: 700;
  font-size: 14px;
  font-family: var(--primary-font);
  transition: 0.2s linear;
  margin-right: 20px;

  &:hover {
    color: var(--ubs-secondary-grey);
    border: 1px solid var(--ubs-secondary-grey) !important;
  }
}

.view-table-btn,
.filter-table-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 154px;
  height: 36px;
  background-color: var(--primary-white) !important;
  border: 1px solid var(--ubs-quaternary-dark-grey) !important;
  color: var(--ubs-quaternary-dark-grey);
  border-radius: 4px;
  font-weight: 700;
  font-size: 14px;
  font-family: var(--primary-font);
  margin-right: 20px;
  margin-left: auto;
  transition: 0.2s linear;

  &:hover {
    color: var(--ubs-secondary-grey);
    border: 1px solid var(--ubs-secondary-grey) !important;
  }

  img {
    width: 13px;
    height: 13px;
    margin-right: 9px;
  }
}

@media only screen and (min-width: 250px) and (max-width: 376px) {
  .filter-table-btn {
    margin-left: 15px;
    margin-right: 7px;
    width: 100px;
  }

  .research {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
  }

  .search {
    margin: 2%;
  }

  .view-table-btn {
    width: 100px;
    margin-left: 7px;
    margin-right: 7px;
  }

  .export-excel-btn {
    width: 110px;
    margin-left: 7px;
    margin-right: 7px;
  }
}

@media only screen and (min-width: 377px) and (max-width: 768px) {
  .filter-table-btn {
    margin-left: 10px;
    margin-right: 10px;
    width: 110px;
  }

  .research {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
  }

  .search {
    margin: 2%;
  }

  .view-table-btn {
    width: 110px;
  }

  .export-excel-btn {
    width: 115px;
  }
}

@media only screen and (min-width: 768px) and (max-width: 992px) {
  .filter-table-btn {
    margin-left: 20px;
  }
}

.view-table-btn mat-icon,
.filter-table-btn mat-icon {
  padding-top: 5px;
  font-size: 14px;
}

@media only screen and (min-width: 380px) and (max-width: 768px) {
  .view-table-btn {
    margin-left: 10px;
  }
}

.research {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border: 0;
  width: 100%;
  margin: 20px 0 17px;
}

.search {
  display: flex;
  align-items: center;
  width: 426px;
  height: 36px;
  border: 1px solid var(--ubs-primary-light-grey);
  border-radius: 4px;
}

.search-input {
  width: 100%;
}

.search-input input {
  padding: 0 0 0 15px;
  margin: 0;
  width: 100%;
  background: transparent;
  border: none;
  outline: none;
}

.icon-style {
  color: var(--ubs-primary-light-grey);
  margin: 8px;
}

.dropdown-menu .check {
  width: 16px;
  height: 16px;
  z-index: 9;
  border-radius: 3px;
  margin: 8px 8px 8px 0;
}

.clear-apply-group {
  padding-top: 10px;
  display: flex;
  justify-content: center;
  box-shadow: 0 0 8px rgb(73 74 73 / 20%);
  height: 50px;
  width: 100%;
}

.blocked_mess {
  background-color: rgb(255 243 205);
  color: rgb(133 100 4);
  border: 1px solid rgb(185 141 8);
  padding: 10px;
  border-radius: 5px;
  position: relative;
  cursor: pointer;

  .close_alert {
    position: absolute;
    right: 10px;
    font-size: 18px;
  }
}

/* stylelint-disable-next-line */
mat-header-cell mat-icon {
  font-size: 12px;

  &:hover {
    cursor: pointer;
  }
}

.accordion-body {
  padding-left: 16px;
  padding-top: 8px;
  width: 320px;
}

.filter-btn {
  text-align: center;
  height: 36px;
  width: 141px;
  margin: 0 5px;
  border: 1px solid var(--ubs-quaternary-dark-grey);
  border-radius: 4px !important;
  background-color: var(--ubs-secondary-white);
}

.filters-dropdown-wrapper {
  position: relative;
}

.bg-lime {
  border: none;
  background-color: var(--ubs-button-dark-green);

  &:disabled {
    color: var(--ubs-secondary-grey);
    background-color: var(--ubs-quaternary-light-grey);
  }
}

.dropdown-menu li {
  color: var(--ubs-primary-grey);
  display: flex;
  align-items: center;
}

.accordion-item {
  padding-bottom: 12px;
  padding-left: 16px;
  padding-right: 36px;
  font-size: 14px;
}

mat-spinner {
  margin: 3rem auto;
  padding-top: 40px;

  ::ng-deep circle {
    stroke: var(--primary-green);
  }
}

.scrolling {
  min-height: 500px;
  height: 100vh;
  overflow: scroll;
}

.paginator {
  height: 100px;
}

::ng-deep thead {
  position: sticky;
  top: 0;
  z-index: 10;
}

.btn-group {
  display: flex;
  justify-content: right;
  align-items: center;
  margin-bottom: 0;
}

.sticky-bottom {
  position: sticky;
  bottom: 0;
  z-index: 9999;
  background-color: var(--ubs-secondary-white);
}

.sticky-top {
  padding: 0;
  margin: 0;
  position: sticky;
  top: 0;
  z-index: 9999;
  background-color: var(--ubs-secondary-white);
}

.check-all {
  padding-left: 8px;
  padding-top: 10px;
}

.dropdown-top-panel {
  height: 80px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 22px 5px;
}

.font-weight-bold {
  margin-bottom: 0;
  padding-left: 22px;
}

.column_header {
  display: flex;
  justify-content: space-between;
  padding: 0 20px;
}

.column_cell {
  display: flex;
  height: 100%;
  align-items: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 0;
  cursor: col-resize;
}

.pointer {
  cursor: pointer;
}

.mat-column-comment_to_address_for_client,
.mat-column-id_order_from_shop,
.mat-column-violations {
  width: 250px;
}

.mat-column-comment_for_order_by_client {
  width: 280px;
}

::ng-deep .mat-progress-bar-buffer {
  background-color: var(--ubs-button-light-green);
}

::ng-deep .mat-progress-bar-fill::after {
  background-color: rgb(122 180 6);
}

::ng-deep .mat-mdc-checkbox-checked .mat-checkbox-background,
::ng-deep .mat-mdc-checkbox-indeterminate .mat-checkbox-background,
::ng-deep .mat-mdc-checkbox-checked:not(.mat-checkbox-disabled).mat-accent .mat-ripple-element,
::ng-deep mat-checkbox:active:not(.mat-checkbox-disabled).mat-accent .mat-ripple-element {
  background-color: var(--ubs-quaternary-dark-grey) !important;
}

.accordion-group-header {
  display: flex;
  justify-content: left;
  align-items: center;
  gap: 5px;
  height: 36px;
  font-weight: bold;
  cursor: pointer;
}

.head {
  font-family: sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  cursor: pointer;
}

.items {
  padding: 16px 24px;
}

.item {
  font-family: sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 24px;
}

.button-group {
  display: flex;
  justify-content: space-between;
  position: relative;

  .head {
    color: var(--ubs-black);
  }
}

.reset-settings {
  float: right;
  border: none;
  border-radius: 100px;
  background-color: transparent;
  padding: 0 5px;
}

.one-row {
  width: 255px;
  margin-right: 10px;
}

.one-row-box {
  width: 100%;
  display: flex;
  align-items: center;
}

#table-container {
  margin-top: 17px;
  overflow-inline: scroll;
  max-height: 83vh;
}

.highlighted {
  background-color: var(--ubs-liberty-green) !important;
}

.message-container {
  display: flex;
  padding: 30px;
  justify-content: center;
  margin: 0 auto;
  font-family: var(--primary-font);
  font-size: 14px;
}

:host ::ng-deep .mdc-form-field > label {
  width: 275px;
}

.date-change_wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

